# fhe-chess-rs

./: .gitignore  Cargo.toml  README.md  install-ubuntu.sh  install.sh  weights.json
src/: common.rs
src/clear-client/: main.rs
src/clear-server/: main.rs
src/client/: main.rs
src/fhe-bench/: bench.rs
src/fhe-client/: main.rs
src/fhe-game/: main.rs
src/fhe-server/: main.rs
src/generate-keys/: main.rs
src/server/: main.rs
