[package]
name = "fhe-chess-rs"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
concrete = { version = "0.2.1", features = [ "booleans" ] }
tungstenite = "0.18.0"
serde_json = "1.0.91"
serde = "1.0.151"
url = "2.3.1"
chess = "3.2.0"

[[bin]]
name = "fhe-server"
path = "src/fhe-server/main.rs"

[[bin]]
name = "clear-server"
path = "src/clear-server/main.rs"


[[bin]]
name = "client"
path = "src/client/main.rs"

