[package]
name = "fhe-chess-rs"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
concrete = { version = "0.2.1", features = [ "booleans", "shortints", "integers", "serde" ] }
concrete-shortint = "0.1.1"
tungstenite = "0.18.0"
serde_json = "1.0.91"
serde = "1.0.151"
url = "2.3.1"
chess = "3.2.0"
criterion = "0.4.0"
bincode = "1.3.3"
rayon = "1.6.1"
bzip2 = "0.4.3"

[[bin]]
name = "fhe-server"
path = "src/fhe-server/main.rs"

[[bin]]
name = "fhe-game"
path = "src/fhe-game/main.rs"


#[[bin]]
#name = "clear-server"
#path = "src/clear-server/main.rs"

#[[bin]]
#name = "fhe-bench"
#path = "src/fhe-bench/bench.rs"

[[bin]]
name = "fhe-client"
path = "src/fhe-client/main.rs"

#[[bin]]
#name = "fhe-evaluation-client"
#path = "src/fhe-evaluation-client/main.rs"

#[[bin]]
#name = "clear-client"
#path = "src/clear-client/main.rs"

[[bin]]
name = "generate-keys"
path = "src/generate-keys/main.rs"
